--- a/index.html
+++ b/index.html
@@ -43,14 +43,24 @@
           </ul>
         </nav>
       </header>
-      <section id="slider" class="slider">
+      <section id="slider" class="slider" aria-label="Image Slider">
         <div id="sliderImg" class="sliderImg">
-          <img src="assets/spring-bird.jpg" alt="Slide 1" class="slide" />
-          <img src="assets/spring-flower.jpg" alt="Slide 2" class="slide" />
-          <img src="assets/spring_flowers.jpg" alt="Slide 3" class="slide" />
+          <img
+            src="assets/spring-bird.jpg"
+            alt="A small bird, sitting in tree"
+            class="slide"
+          />
+          <img
+            src="assets/spring-flower.jpg"
+            alt="A spring flowers"
+            class="slide"
+          />
+          <img src="assets/spring_flowers.jpg" alt="Snowdrops" class="slide" />
         </div>
-        <button class="prev" id="prev">&#10094;</button>
-        <button class="next" id="next">&#10095;</button>
+        <button class="prev" id="prev" aria-label="Previous Slide">
+          &#10094;
+        </button>
+        <button class="next" id="next" aria-label="Next Slide">&#10095;</button>
       </section>
       <main>
         <article>
