updated slider images

--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
             class="slide"
           />
           <img src="assets/spring_flowers.jpg" alt="Snowdrops" class="slide" />
+          <img
+            src="assets/spring-gif-19.gif"
+            alt="Cheery pik bloom"
+            class="slide"
+          />
         </div>
         <button class="prev" id="prev" aria-label="Previous Slide">
           &#10094;
