update menu section

--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
               <div class="dropdown">
                 <a href="#">Home</a>
                 <ul class="dropdownList">
-                  <li>O mnie</li>
-                  <li>Ulubione potrawy</li>
+                  <li>About me</li>
+                  <li>Fovorite food</li>
                   <li>Hobby</li>
                 </ul>
               </div>
             </li>
             <li>
-              <a href="#">Galeria</a>
+              <a href="#">Gallery</a>
             </li>
             <li>
-              <a href="#">Kariera</a>
+              <a href="#">Career</a>
             </li>
             <li>
-              <a href="#">Kontakt</a>
+              <a href="#">Contact</a>
             </li>
           </ul>
         </nav>
